# gitgud

./: Cargo.toml  README.md  default.toml  example.toml
.github/workflows/: 00-create-release.yaml  build.yaml  freebsd.yaml  linux.yaml  macos.yaml  rust-build.yaml  rust-clippy.yml  windows.yaml
src/: args.rs  config.rs  display.rs  main.rs
src/git/: mod.rs  remote.rs  status.rs
src/github/: api.rs  mod.rs  pr.rs
src/repo/: filters.rs  mod.rs  status.rs
