[package]
name = "gitgud"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
colored = "2.0.4"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true

[build]
target = "x86_64-unknown-linux-musl"
