[package]
name = "gitgud"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tokio = { version = "1.32", features = ["full"] }
octocrab = "0.30"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true

[build]
target = "x86_64-unknown-linux-musl"
